--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <h1>My website</h1>
         <nav>
-            <a href="index.html"></a>
-            <a href="about.html"></a>
-            <a href="posts.html"></a>
+            <a href="index.html"> Index</a>
+            <a href="about.html">About</a>
+            <a href="posts.html">Posts</a>
         </nav>
     </header>
     <main>
