--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
     <header>
         <h1>About me</h1>
         <nav>
-            <a href="index.html"></a>
-            <a href="about.html"></a>
-            <a href="posts.html"></a>
+            <a href="index.html">Index</a>
+            <a href="about.html">About</a>
+            <a href="posts.html">Posts</a>
         </nav>
     </header>
     <main>
