--- a/index.html
+++ b/index.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>
-        My Task1-Home
-    </title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta charset="UTF-8">
+  <title>My Task1 - Home</title>
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
-        <h1>My website</h1>
-        <nav>
-            <a href="index.html"> Index</a>
-            <a href="about.html">About</a>
-            <a href="posts.html">Posts</a>
-        </nav>
-    </header>
-    <main>
-        <h2>Welcome</h2>
-        <p>This is my home page.</p>
-    </main>
-    <footer>
-        <p>&copy; 2025 my website</p>
-    </footer>
+  <header>
+    <div class="container">
+      <h1>🌐 My Website</h1>
+      <nav>
+        <a href="index.html" class="active">Home</a>
+        <a href="about.html">Contact Me</a>
+        <a href="posts.html">Posts</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <h2>Welcome to My Website</h2>
+      <p>
+        This is my personal space on the web where I share my thoughts, 
+        projects, and learnings. You’ll find articles, updates, and resources 
+        about technology, coding, and more.
+      </p>
+      <a href="posts.html" class="btn">Explore Posts</a>
+    </section>
+
+    <section class="intro">
+      <h3>About This Site</h3>
+      <p>
+        This website is a simple project built with HTML, CSS, and JavaScript. 
+        It’s designed to be lightweight, clean, and responsive. 
+        The goal is to practice frontend skills and share ideas in an easy-to-read format.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 My Website | Built with ❤️</p>
+  </footer>
 </body>
 </html>
