--- a/posts.html
+++ b/posts.html
@@ -11,15 +11,16 @@
     <h1>Posts</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="about.html">Conatact Me</a>
       <a href="posts.html">Posts</a>
     </nav>
   </header>
 
   <main>
-    <h2>Latest Posts (from API)</h2>
-    <button id="loadBtn">Load Posts</button>
-    <div id="postsContainer"></div>
+    <h2>Latest Posts</h2>
+    <!-- <button id="loadBtn">Load Posts</button> -->
+    <div id="postsContainer" class="divi">
+    </div>
   </main>
 
   <footer>
