--- a/posts.html
+++ b/posts.html
@@ -11,7 +11,7 @@
     <h1>Posts</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">Conatact Me</a>
+      <a href="about.html">Contact Me</a>
       <a href="posts.html">Posts</a>
     </nav>
   </header>
